fixed bug "added comment" box falling a line when title is too short

--- a/www/themes/basic/css/base.less
+++ b/www/themes/basic/css/base.less
@@ -268,6 +268,7 @@ h2 {
 .topic-view {
   float:right;
   margin-right: 15rem;
+  min-width: 41.2rem;
 
   h2 {
     padding: 1rem;
@@ -344,10 +345,10 @@ h2 {
       }
       .comment-new {
         float: right;
+        margin-left:0.5rem;
         width: 30rem;
       }
       .comment-submit {
-          margin-right:0.5rem;
           width: 7.5rem;
       }
     }
